# ServerClientExample

./: README.md  client.py  main.py  models.py  pyproject.toml  test_api.py
test_data/: simple.json
