[tool.poetry]
name = "fast"
version = "0.1.0"
description = ""
authors = ["Mathijs <mathijspeeters@telenet.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pytest = "^8.3.3"
httpx = "^0.27.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
